# Grasp-simulation

./: .gitignore  Add_variation_camera_pose.py  CMakeLists.txt  DataAnalysis.py  Main_Dany.py  Make_set.py  Readme.md  Readme.txt  TakePoses.py  Test_interface_dany_bb.i  Valuate_voxel_variation.py  balls_controller.py  balls_controller_grasp.py  binvox_read.py  build_database_giorgio.sh  build_database_giorgio2.sh  build_database_mx.sh  build_database_mx2.sh  camera_pose_variation.py  camera_to_image_Kris.py  check_pose_original.py  check_poses.py  competition.sh  create_mvbb.py  create_mvbb_filtered.py  create_mvbb_names.py  dany_make_rotate_voxel.py  draw_bbox.py  evaluate_binvox.py  find_index.py  grasp_valuation.txt  grasp_valuation_template.rob  graspvariation.py  i16mc.py  import_reflex.py  main.py  main_final_task1.py  main_final_task2.py  make_binvox.py  mano_oggetto.py  (+22 more)
2DCNN/: Main.py  cont_output_layer.py  conv2d_Dany.py  dataset_Dany.py  draw.py  dropout.py  euler.csv  fully_connected_layer.py  maxpool2d.py  nav_euler_std.csv  nesterov2.csv  nev3.csv  nev4.csv  nev5.csv  nev6_std.csv  nev8_std.csv  nev9_std.csv.csv  nev_quat_min.csv  nev_quaterion.csv  nev_quaternion_acos.csv  nevsterov_res_all_poses.csv  res_2d.txt.  res_2d_one_pose.txt  res_2d_one_pose_for_obj.txt  res_cost_euler_drop.csv  res_cost_quaternion_acos_drop.csv  res_cost_quaternion_min_drop.csv  res_quat_abs_drop.csv  updates.py
2DCNN/NNSet/Image/: xwing_rotate_0.csv
2d_block_indep/: README.txt  dataset.py  dataset_stack.py  learn_act.py  learn_baseline.py  learn_kernel.py  learn_mixin.py  learn_stack.py
2d_block_indep/layers/: conv_layer.py  conv_layer2.py  fully_connected_layer.py  output_layer.py
3DCNN/: 3d6Cnn3fcl_reduceiddenlayerev2_7_et2_52.npz  Main.py  cont_output_layer.py  conv3d_Dany.py  dataset_Dany.py  from_pose_to_rpy.py  fully_connected_layer.py  maxpool3d.py  read_as_coord_array.py  results2.txt  results_1.txt  results_3d.txt  test_dataset_split_dany.py  test_read_npz.py
3DCNN/NNSet/Pose/ObjectsVariation/: xwing_rotate_1.csv  xwing_rotate_2.csv
3DCNN/NNSet/Pose/PoseVariation/: xwing_rotate_1.csv  xwing_rotate_2.csv
3DCNN/NNSet/Pose/pose/: allcolorcar.csv  pot.csv  xwing.csv
col_2d_f/: README.txt  dataset.py  dataset_stack.py  learn_act.py  learn_baseline.py  learn_mixin.py  learn_stack.py
col_2d_f/layers/: cont_output_layer.py  conv_layer.py
data/objects/newObjDany/bowA/: poisson_mesh.binvox  poisson_mesh.ply  tsdf_mesh.stl
data/objects/newObjDany/bowlB/: bowlB.pcd  poisson_mesh.binvox  poisson_mesh.ply  tsdf_mesh.stl
data/objects/newObjDany/containerA/: containerA.pcd  poisson_mesh.binvox  poisson_mesh.ply  tsdf_mesh.stl
data/objects/newObjDany/containerB/: containerB.pcd  poisson_mesh.binvox  poisson_mesh.ply  tsdf_mesh.stl
data/objects/newObjDany/containerC/: containerC.pcd  poisson_mesh.binvox  poisson_mesh.ply  tsdf_mesh.stl
data/objects/newObjDany/containerD/: containerD.pcd  poisson_mesh.binvox  poisson_mesh.ply  tsdf_mesh.stl
data/objects/newObjDany/jug/: jug.pcd  poisson_mesh.binvox  poisson_mesh.ply  tsdf_mesh.stl
data/objects/newObjDany/juicerB/: poisson_mesh.binvox  poisson_mesh.ply  tsdf_mesh.stl
data/objects/newObjDany/kettle/: kettle.pcd  poisson_mesh.binvox  poisson_mesh.ply  tsdf_mesh.stl
data/objects/newObjDany/kitchenUtensilA/: kitchenUtensilA.pcd  poisson_mesh.binvox  poisson_mesh.ply  tsdf_mesh.stl
data/objects/newObjDany/kitchenUtensilB/: kitchenUtensilB.pcd  poisson_mesh.binvox  poisson_mesh.ply  tsdf_mesh.stl
data/objects/newObjDany/kitchenUtensilC/: kitchenUtensilC.pcd  poisson_mesh.binvox  poisson_mesh.ply  tsdf_mesh.stl
data/objects/newObjDany/kitchenUtensilD/: kitchenUtensilD.pcd  poisson_mesh.binvox  poisson_mesh.ply  tsdf_mesh.stl
data/objects/newObjDany/kitchenUtensilE/: kitchenUtensilE.pcd  poisson_mesh.binvox  poisson_mesh.ply  tsdf_mesh.stl
data/objects/newObjDany/kitchenUtensilF/: kitchenUtensilF.pcd  poisson_mesh.binvox  poisson_mesh.ply  tsdf_mesh.stl
data/objects/newObjDany/kitchenUtensilG/: kitchenUtensilG.pcd  poisson_mesh.binvox  poisson_mesh.ply  tsdf_mesh.stl
data/objects/newObjDany/mugD/: mugD.pcd  poisson_mesh.binvox  poisson_mesh.ply
data/objects/newObjDany/panA/: panA.pcd  poisson_mesh.binvox  poisson_mesh.ply  tsdf_mesh.stl
data/objects/newObjDany/pot/: poisson_mesh.binvox  poisson_mesh.ply  pot.pcd  tsdf_mesh.stl
data/objects/princeton/allcolorcar/: m1485_info.txt  tsdf_mesh.binvox.bt  tsdf_mesh.binvox.bt.ot  tsdf_mesh_1.binvox  tsdf_mesh_rotate0.off  tsdf_mesh_rotate1.off  tsdf_mesh_rotate2.off  tsdf_mesh_rotate3.off  tsdf_mesh_rotate4.off  tsdf_mesh_rotate5.off  tsdf_mesh_rotate6.off  tsdf_mesh_rotate7.off
data/objects/voxelrotate/princeton/xwing/: xwing_rotate_1.off  xwing_rotate_2.off
data/robots/: reflex_col_sensors.xml  soft_hand.urdf  test_sensor.xml
db/: README.md  database_scored.csv  database_scored_ema_old.csv  database_scored_g.csv  database_scoredcompetition.csv  database_scoredema.csv  database_scoredgiorgio2.csv
generate_data_col_arm/: generate_data_col_arm.py
generate_data_col_arm/bitmaps/: cylinder_occs.npz  fsv.npz  robot_occ.npz
mvbb/: CollisionCheck.py  GetForces.py  ScalaReduce.py  db.py  draw_bbox.py  generator.py  graspvariation.py  kindness.py
plugins/: reflex_col.py  soft_hand.py
plugins/actuators/: CompliantHandEmulator.py
python/: CMakeLists.txt  pacman_dany_bb.i
resources/: default_initial_reflex_col.xform  default_initial_soft_hand.xform
resources/balls/: default_initial_soft_hand.xform
resources/shelf/: default_initial_soft_hand.xform
scripts/: build_database_all_objects.sh  build_database_ema.sh  build_database_mx.sh
src/: pacman_bb.cpp  pacman_bb.h  pacman_bb_test.cpp  pacman_bb_utils.cpp  pacman_bb_utils.hpp
vcglib/: CMakeLists.txt
vcglib/.kdev4/: vcglib.kdev4
vcglib/apps/tridecimator/: meshdecimator.h  mvbb_decimator.cpp  mvbb_decimator.h  mvbb_tridecimator.cpp  tridecimator.cpp
